removing search page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ links:
   url: /
 - title: Tentang
   url: /about
-- title: Cari
-  url: /search
+    #- title: Cari
+    #url: /search
 - title: RSS
   url: /atom.xml
