moving nav menu to bottom + general margin edit

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ url: #yoururl
 title: Rekabumi
 description: Hobi dan opini 
 twitter:
-  username: stervel
-  card: summary
+  username: 
+  card: 
   creator: #yourusername
 author:
   twitter: #yourusername
