--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-site: Rekabumi 
+site: Andre - I write
 url: #yoururl
-title: Rekabumi
-description: Hobi dan opini 
+title: Andre
+description: Writings 
 twitter:
   username: 
   card: 
